[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://Scenes/UI/inventory_panel.gd" id="1_panel_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_window"]
content_margin_left = 16.0
content_margin_top = 14.0
content_margin_right = 16.0
content_margin_bottom = 16.0
bg_color = Color(0.05, 0.08, 0.12, 0.95)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.3, 0.42, 0.75)
corner_radius_top_left = 14
corner_radius_top_right = 14
corner_radius_bottom_right = 14
corner_radius_bottom_left = 14

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_header"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.07, 0.11, 0.17, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.32, 0.45, 0.65)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_progress_bg"]
bg_color = Color(0.05, 0.07, 0.1, 0.9)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.2, 0.3, 0.4, 0.6)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="InventoryPanel" type="PanelContainer"]
theme_override_styles/panel = SubResource("StyleBoxFlat_window")
script = ExtResource("1_panel_script")

[node name="Content" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Header" type="PanelContainer" parent="Content"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_header")

[node name="HeaderRow" type="HBoxContainer" parent="Content/Header"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="Content/Header/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Inventory"
theme_override_colors/font_color = Color(0.85, 0.95, 1, 1)
theme_override_font_sizes/font_size = 15

[node name="CapLabel" type="Label" parent="Content/Header/HeaderRow"]
layout_mode = 2
custom_minimum_size = Vector2(168, 0)
horizontal_alignment = 2
vertical_alignment = 1
text = "0 / 0"
theme_override_colors/font_color = Color(0.7, 0.82, 0.95, 1)
theme_override_font_sizes/font_size = 12

[node name="CapBar" type="HBoxContainer" parent="Content"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 16)
theme_override_constants/separation = 0

[node name="CapProgress" type="ProgressBar" parent="Content/CapBar"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 16)
max_value = 100.0
show_percentage = false
theme_override_styles/background = SubResource("StyleBoxFlat_progress_bg")

[node name="ListScroll" type="ScrollContainer" parent="Content"]
layout_mode = 2
size_flags_vertical = 3
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 220)

[node name="List" type="VBoxContainer" parent="Content/ListScroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
